[tool.poetry]
name = "raspberrypi-tmp"
version = "0.1.0"
description = ""
authors = ["Naoki0722 <mattu.nao722@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
adafruit-circuitpython-dht = "^4.0.4"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
